--- a/package.json
+++ b/package.json
@@ -49,17 +49,21 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "@uiw/react-md-editor": "^4.0.5",
     "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
-    "date-fns": "^4.1.0",
+    "date-fns": "^2.30.0",
     "embla-carousel-react": "^8.5.2",
     "geist": "^1.3.0",
     "input-otp": "^1.4.2",
     "jose": "^6.0.10",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.483.0",
     "next": "^15.0.1",
+    "next-cloudinary": "^6.16.0",
     "next-redux-wrapper": "^8.1.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
@@ -69,7 +73,7 @@
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
-    "redux": "^5.0.1",
+    "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
@@ -82,11 +86,13 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/bun": "latest",
-    "@types/eslint": "^8.56.10",
-    "@types/node": "^20.14.10",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@prisma/client": "^6.5.0",
+    "@types/bun": "^1.2.8",
+    "@types/eslint": "^8.56.12",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^20.17.28",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "eslint": "^8.57.0",
@@ -94,12 +100,19 @@
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
+    "prisma": "^6.5.0",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.5.3"
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.2"
   },
   "ct3aMetadata": {
     "initVersion": "7.38.1"
   },
   "packageManager": "pnpm@10.5.2",
-  "module": "index.ts"
+  "module": "index.ts",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@prisma/client"
+    ]
+  }
 }
