Fix Prisma build issue

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,12 @@
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
+DATABASE_URL=""
+
+JWT_SECRET=""
+
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=""
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=""
+
+CLOUDINARY_API_KEY=""
+CLOUDINARY_API_SECRET=""
